linting with sonar - batch 2